# adaboost

./: .gitignore  CMakeLists.txt  README.md
.zcache/: DEBS_avail
Adaboost/: Adaboost.cpp  Adaboost.hpp  CMakeLists.txt  tags  test_adaboost.cpp
binaryTree/: CMakeLists.txt  binarytree.cpp  binarytree.hpp  tags  test_binarytree.cpp
chnfeature/: .Pyramid.cpp.swp  .Pyramid.h.swp  .main.cpp.swp  CMakeLists.txt  Pyramid.cpp  Pyramid.h  Pyramid_back.cpp  Pyramid_back.h  Pyramid_gnp.cpp  Pyramid_gnp.h  Pyramid_new.cpp  \  main.cpp  sseFun.cpp  sseFun.h  文本文件
data/: test_data.mat  train_neg.xml  train_pos.xml
log/: CMakeLists.txt  tlog.cpp  tlog.h
misc/: .misc.cpp.swp  .misc.hpp.swp  CMakeLists.txt  NonMaxSupress.cpp  NonMaxSupress.h  jitterImage.cpp  main.cpp  misc.cpp  misc.hpp  tags
softcascade/: .main.cpp.swp  .softcascade.cpp.swp  CMakeLists.txt  main.cpp  softcascade.cpp  softcascade.hpp  tags  test.cpp
